syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.matthias";

service Chat {
  rpc login (LoginRequest) returns (LoginResponse) {}
  rpc logout (LogoutRequest) returns (LogoutResponse) {}

  rpc chatStream (SubscribeMessage) returns (stream ChatMessage) {}
  rpc sendMessage (ClientMessage) returns (Empty) {}
  rpc listUsers (GetUsersMessage) returns (stream UserInfoMessage) {}
}

enum StatusCode {
  OK = 0;
  FAILED = 1;
}

message LoginRequest {
  string username = 1;
}

message LoginResponse {
  StatusCode status = 1;
  string sessionID = 2;
}

message LogoutRequest {
  string username = 1;
  string sessionID = 2;
}

message LogoutResponse {
  StatusCode status = 1;
}

message SubscribeMessage {
  string sessionID = 1;
}

message ChatMessage {
  string sessionID = 1;
  string payload = 2;
}

message ClientMessage {
  string sessionID = 1;
  string payload = 2;
}

message Empty {
  StatusCode status = 1;
}

message GetUsersMessage {
  string sessionID = 1;
}

message UserInfoMessage {
  string username = 1;
}